force-app/main/default/objects/Opportunity/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BU</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>BU__c.Account__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BU__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>