force-app/main/default/objects/Opportunity/fields/Consignee__c.field-meta.xml
<CustomField>
    <fullName>Consignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is required to move the Opportunity to the Internal Review Stage</inlineHelpText>
    <label>Consignee / Beneficial Cargo Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Consignee)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>