force-app/main/default/objects/Opportunity/fields/Contribution__c.field-meta.xml
<CustomField>
    <fullName>Contribution__c</fullName>
    <formula>Amount-Expected_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>