force-app/main/default/objects/Opportunity/fields/Date_of_State_Lead__c.field-meta.xml
<CustomField>
    <fullName>Date_of_State_Lead__c</fullName>
    <label>Date of State Lead</label>
    <type>Date</type>
</CustomField>