force-app/main/default/objects/Opportunity/fields/Date_Opportunity_Owner_NPO_Updates__c.field-meta.xml
<CustomField>
    <fullName>Date_Opportunity_Owner_NPO_Updates__c</fullName>
    <label>Date Opportunity Owner NPO Updates</label>
    <type>DateTime</type>
</CustomField>