force-app/main/default/objects/Opportunity/fields/Equipment_Volume_Needed__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Volume_Needed__c</fullName>
    <label>Equipment Volume Needed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>