force-app/main/default/objects/Opportunity/fields/Expected_Cost__c.field-meta.xml
<CustomField>
    <fullName>Expected_Cost__c</fullName>
    <label>Expected Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>