force-app/main/default/objects/Opportunity/fields/Incentive_Capital__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Capital__c</fullName>
    <description>This field shows the capital incentive value for ID Opportunities only.</description>
    <label>Incentive Capital ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>