force-app/main/default/objects/Opportunity/fields/Incentive_Per_Car__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Per_Car__c</fullName>
    <description>This field shows the incentive value per car for ID Opportunities only.</description>
    <label>Incentive Per Car ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>