force-app/main/default/objects/Opportunity/fields/Interchange_Type__c.field-meta.xml
<CustomField>
    <fullName>Interchange_Type__c</fullName>
    <label>Interchange Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Steel Wheel</fullName>
            </value>
            <value>
                <fullName>Rubber Tire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>