force-app/main/default/objects/Opportunity/fields/iTrax_Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>iTrax_Activity_ID__c</fullName>
    <label>iTrax Activity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>