force-app/main/default/objects/Opportunity/fields/Major_Group__c.field-meta.xml
<CustomField>
    <fullName>Major_Group__c</fullName>
    <formula>TEXT(NSSales_Account_Classification__r.NS_Major_Group_BU__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Major Group</label>
    <type>Text</type>
</CustomField>