force-app/main/default/objects/Opportunity/fields/Marketing_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Incentive__c</fullName>
    <label>Marketing Incentive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Car</fullName>
            </value>
            <value>
                <fullName>Capital</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>