force-app/main/default/objects/Opportunity/fields/Maximum_Building_Size_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Building_Size_sq_ft__c</fullName>
    <label>Maximum Building Size (Sq Ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>