force-app/main/default/objects/Opportunity/fields/Maximum_Daily_Truck_Volume__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Daily_Truck_Volume__c</fullName>
    <label>Maximum Daily Truck Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>