force-app/main/default/objects/Opportunity/fields/Maximum_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Jobs__c</fullName>
    <label>Maximum Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>