force-app/main/default/objects/Opportunity/fields/Maximum_Power_Requirements_MW__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Power_Requirements_MW__c</fullName>
    <label>Maximum Power Requirement (MW)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>