force-app/main/default/objects/Opportunity/fields/Minimum_Building_Size_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Building_Size_Sq_Ft__c</fullName>
    <label>Minimum Building Size (Sq Ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>