force-app/main/default/objects/Opportunity/fields/Minimum_Daily_Truck_Volume__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Daily_Truck_Volume__c</fullName>
    <label>Minimum Daily Truck Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>