force-app/main/default/objects/Opportunity/fields/Minimum_Power_Requirement_MW__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Power_Requirement_MW__c</fullName>
    <label>Minimum Power Requirement (MW)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>