force-app/main/default/objects/Opportunity/fields/Minimum_Site_Size_Acres__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Site_Size_Acres__c</fullName>
    <label>Minimum Site Size (Acres)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>