force-app/main/default/objects/Opportunity/fields/Minor_Group__c.field-meta.xml
<CustomField>
    <fullName>Minor_Group__c</fullName>
    <formula>Text( NSSales_Account_Classification__r.NS_Minor_Group_BU__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minor Group</label>
    <type>Text</type>
</CustomField>