force-app/main/default/objects/Opportunity/fields/MPU__c.field-meta.xml
<CustomField>
    <fullName>MPU__c</fullName>
    <formula>Contribution__c / NS_Estimated_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MPU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>