force-app/main/default/objects/Opportunity/fields/NS_30DaysStatusPro__c.field-meta.xml
<CustomField>
    <fullName>NS_30DaysStatusPro__c</fullName>
    <defaultValue>0</defaultValue>
    <label>30DaysStatusPro</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>