force-app/main/default/objects/Opportunity/fields/NS_7Days_Mail__c.field-meta.xml
<CustomField>
    <fullName>NS_7Days_Mail__c</fullName>
    <label>7Days Mail</label>
    <type>DateTime</type>
</CustomField>