force-app/main/default/objects/Opportunity/fields/NS_Anticipated_First_Car_Date__c.field-meta.xml
<CustomField>
    <fullName>NS_Anticipated_First_Car_Date__c</fullName>
    <description>ID Request</description>
    <label>Anticipated First Car Date</label>
    <type>Date</type>
</CustomField>