force-app/main/default/objects/Opportunity/fields/NS_Anticipated_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>NS_Anticipated_Start_Date__c</fullName>
    <label>Anticipated Start Date</label>
    <type>Date</type>
</CustomField>