force-app/main/default/objects/Opportunity/fields/NS_Chassis_Ownership__c.field-meta.xml
<CustomField>
    <fullName>NS_Chassis_Ownership__c</fullName>
    <description>Sales - IM request to select chassis type. Currently not on ID Oppty</description>
    <label>Chassis Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Both Rail and Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>