force-app/main/default/objects/Opportunity/fields/NS_Commodity_STCC__c.field-meta.xml
<CustomField>
    <fullName>NS_Commodity_STCC__c</fullName>
    <label>Commodity/STCC</label>
    <length>250</length>
    <type>Text</type>
</CustomField>