force-app/main/default/objects/Opportunity/fields/NS_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>NS_Contract_End_Date__c</fullName>
    <description>date the contract (could be multi-year) ends</description>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>