force-app/main/default/objects/Opportunity/fields/NS_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>NS_Contract_Start_Date__c</fullName>
    <description>The date contract goes into effect</description>
    <inlineHelpText>This field is required to move the Opportunity to the Internal Review Stage</inlineHelpText>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>