force-app/main/default/objects/Opportunity/fields/NS_Created_Date_as_Text__c.field-meta.xml
<CustomField>
    <fullName>NS_Created_Date_as_Text__c</fullName>
    <description>Hidden field to use in Opportunity Name Creation</description>
    <formula>LEFT (TEXT(CreatedDate),10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date as Text</label>
    <type>Text</type>
</CustomField>