force-app/main/default/objects/Opportunity/fields/NS_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>NS_Customer_Type__c</fullName>
    <description>from workbench plus additional picklist options for other depts</description>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3PL</fullName>
            </value>
            <value>
                <fullName>Beneficial Owner</fullName>
            </value>
            <value>
                <fullName>Drayage</fullName>
            </value>
            <value>
                <fullName>ID Allies</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payer</fullName>
            </value>
            <value>
                <fullName>Port</fullName>
            </value>
            <value>
                <fullName>Railroad</fullName>
            </value>
            <value>
                <fullName>Receiver</fullName>
            </value>
            <value>
                <fullName>Shipper</fullName>
            </value>
            <value>
                <fullName>Shipper &amp; Receiver</fullName>
            </value>
            <value>
                <fullName>TBT</fullName>
            </value>
            <value>
                <fullName>Transload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>