force-app/main/default/objects/Opportunity/fields/NS_Date_to_update_time_in_status__c.field-meta.xml
<CustomField>
    <fullName>NS_Date_to_update_time_in_status__c</fullName>
    <label>Date to update time in status</label>
    <type>Date</type>
</CustomField>