force-app/main/default/objects/Opportunity/fields/NS_Delphi_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>NS_Delphi_Sync_Date__c</fullName>
    <description>Date the Opportunity data gets synced to Delphi</description>
    <label>Delphi Sync Date</label>
    <type>Date</type>
</CustomField>