force-app/main/default/objects/Opportunity/fields/NS_Destination_Carrier__c.field-meta.xml
<CustomField>
    <fullName>NS_Destination_Carrier__c</fullName>
    <label>Destination Carrier</label>
    <length>250</length>
    <type>Text</type>
</CustomField>