force-app/main/default/objects/Opportunity/fields/NS_Destination_City__c.field-meta.xml
<CustomField>
    <fullName>NS_Destination_City__c</fullName>
    <description>the destination city will come from Workbench when possible</description>
    <inlineHelpText>This field is required to move the Opportunity to the Internal Review Stage</inlineHelpText>
    <label>Destination City</label>
    <length>250</length>
    <type>Text</type>
</CustomField>