force-app/main/default/objects/Opportunity/fields/NS_Destination_Ramp__c.field-meta.xml
<CustomField>
    <fullName>NS_Destination_Ramp__c</fullName>
    <label>NS Destination Ramp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>