force-app/main/default/objects/Opportunity/fields/NS_Destination_State__c.field-meta.xml
<CustomField>
    <fullName>NS_Destination_State__c</fullName>
    <inlineHelpText>This field is required to move the Opportunity to the Internal Review Stage</inlineHelpText>
    <label>Destination State</label>
    <length>250</length>
    <type>Text</type>
</CustomField>