force-app/main/default/objects/Opportunity/fields/NS_Destination_Type__c.field-meta.xml
<CustomField>
    <fullName>NS_Destination_Type__c</fullName>
    <description>Origin type was requested as part of workbench - including the destination field  as well</description>
    <label>Destination Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>