force-app/main/default/objects/Opportunity/fields/NS_Equipment_Length__c.field-meta.xml
<CustomField>
    <fullName>NS_Equipment_Length__c</fullName>
    <description>Sales - IM request to show in Feet the length of the equipment</description>
    <inlineHelpText>Enter number in Feet</inlineHelpText>
    <label>Equipment Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>