force-app/main/default/objects/Opportunity/fields/NS_Equipment_Ownership__c.field-meta.xml
<CustomField>
    <fullName>NS_Equipment_Ownership__c</fullName>
    <description>Sales - Intermodal request to show equipment ownership as private, rail or both</description>
    <label>Equipment Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Both Private and Rail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>