force-app/main/default/objects/Opportunity/fields/NS_Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>NS_Equipment_Type__c</fullName>
    <description>Sales - select the types of equipment needed for this deal</description>
    <label>Equipment Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>60’ Boxcar</fullName>
            </value>
            <value>
                <fullName>86’ Boxcar</fullName>
            </value>
            <value>
                <fullName>Articulated Bi-Level</fullName>
            </value>
            <value>
                <fullName>Bi-Level</fullName>
            </value>
            <value>
                <fullName>Boxcar</fullName>
            </value>
            <value>
                <fullName>Container</fullName>
            </value>
            <value>
                <fullName>Covered Coil</fullName>
            </value>
            <value>
                <fullName>Covered Hoppers</fullName>
            </value>
            <value>
                <fullName>Flatcar</fullName>
            </value>
            <value>
                <fullName>Gondola</fullName>
            </value>
            <value>
                <fullName>Modified Articulated Bi-Level</fullName>
            </value>
            <value>
                <fullName>Modified Bi-Level</fullName>
            </value>
            <value>
                <fullName>Multi-level</fullName>
            </value>
            <value>
                <fullName>Open Coil</fullName>
            </value>
            <value>
                <fullName>Reefer Boxcar</fullName>
            </value>
            <value>
                <fullName>Roadrailer</fullName>
            </value>
            <value>
                <fullName>Tank Car</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
            <value>
                <fullName>Tri-Level</fullName>
            </value>
            <value>
                <fullName>Uni-Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>