force-app/main/default/objects/Opportunity/fields/NS_Estimated_Carloads__c.field-meta.xml
<CustomField>
    <fullName>NS_Estimated_Carloads__c</fullName>
    <description>Sales - enter the estimated new number of carloads the opportunity could bring. ID Req.</description>
    <label>Estimated Carloads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>