force-app/main/default/objects/Opportunity/fields/NS_Estimated_Volume__c.field-meta.xml
<CustomField>
    <fullName>NS_Estimated_Volume__c</fullName>
    <description>Volume (workbench in calcualtes volume in Carloads)</description>
    <inlineHelpText>This field is required to move the Opportunity to the Internal Review Stage</inlineHelpText>
    <label>Estimated Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>