force-app/main/default/objects/Opportunity/fields/NS_Estimated_Volume_Type__c.field-meta.xml
<CustomField>
    <fullName>NS_Estimated_Volume_Type__c</fullName>
    <description>the type of volume from the estimated volume field</description>
    <label>Estimated Volume Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carloads</fullName>
            </value>
            <value>
                <fullName>Tons</fullName>
            </value>
            <value>
                <fullName>Units</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>