force-app/main/default/objects/Opportunity/fields/NS_Expiration_Notification_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>NS_Expiration_Notification_Timeframe__c</fullName>
    <label>Expiration Notification Timeframe</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>