force-app/main/default/objects/Opportunity/fields/NS_Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>NS_Facility_Type__c</fullName>
    <description>ID request</description>
    <label>Facility Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>