force-app/main/default/objects/Opportunity/fields/NS_FSC_Discount__c.field-meta.xml
<CustomField>
    <fullName>NS_FSC_Discount__c</fullName>
    <description>field from IM</description>
    <inlineHelpText>Enter the discount ($) from the standard rate.</inlineHelpText>
    <label>FSC Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>