force-app/main/default/objects/Opportunity/fields/NS_Import_Export__c.field-meta.xml
<CustomField>
    <fullName>NS_Import_Export__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sales - If the deal involves an import or export of goods, check the box</description>
    <inlineHelpText>Check the box if the deal includes import or export opportunity .</inlineHelpText>
    <label>Import/Export</label>
    <type>Checkbox</type>
</CustomField>