force-app/main/default/objects/Opportunity/fields/NS_Incentive_s__c.field-meta.xml
<CustomField>
    <fullName>NS_Incentive_s__c</fullName>
    <description>IM field request- primarily volume related</description>
    <label>Incentive(s)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>