force-app/main/default/objects/Opportunity/fields/NS_Industry_Investment__c.field-meta.xml
<CustomField>
    <fullName>NS_Industry_Investment__c</fullName>
    <description>ID Requirement</description>
    <label>Industry Investment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>