force-app/main/default/objects/Opportunity/fields/NS_Lost_Cancelled_Description__c.field-meta.xml
<CustomField>
    <fullName>NS_Lost_Cancelled_Description__c</fullName>
    <description>Additional description for lost or cancelled opportunity reasons.</description>
    <inlineHelpText>Enter additional description if necessary.</inlineHelpText>
    <label>Lost/Cancelled Description</label>
    <type>TextArea</type>
</CustomField>