force-app/main/default/objects/Opportunity/fields/NS_Lost_Cancelled_Reason__c.field-meta.xml
<CustomField>
    <fullName>NS_Lost_Cancelled_Reason__c</fullName>
    <description>Reason the opportunity was lost or cancelled</description>
    <inlineHelpText>Select reason for loss of Opportunity</inlineHelpText>
    <label>Lost/Cancelled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alternative Product</fullName>
            </value>
            <value>
                <fullName>Alternative Source</fullName>
            </value>
            <value>
                <fullName>Bid Award</fullName>
            </value>
            <value>
                <fullName>Billing Type</fullName>
            </value>
            <value>
                <fullName>Business or Plant Closure/Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Competitor Capacity (i.e. Truck Capacity)</fullName>
            </value>
            <value>
                <fullName>Competitor Customer Service</fullName>
            </value>
            <value>
                <fullName>Competitor Service Change (New or Cancelled Service)</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Extreme Weather Event</fullName>
            </value>
            <value>
                <fullName>Location Inaccessible</fullName>
            </value>
            <value>
                <fullName>Market Conditions</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>NPO</fullName>
            </value>
            <value>
                <fullName>NS Customer Service</fullName>
            </value>
            <value>
                <fullName>NS Equipment Capacity/Quality</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Plant Closure</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Terms and Conditions</fullName>
            </value>
            <value>
                <fullName>Weather - Seasonality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>