force-app/main/default/objects/Opportunity/fields/NS_Lost_To__c.field-meta.xml
<CustomField>
    <fullName>NS_Lost_To__c</fullName>
    <description>Where the opportunity was lost to</description>
    <label>Lost To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barge</fullName>
            </value>
            <value>
                <fullName>CSX</fullName>
            </value>
            <value>
                <fullName>Internal NS Channel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Railroad</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>