force-app/main/default/objects/Opportunity/fields/NS_Marketing_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>NS_Marketing_Approval_Status__c</fullName>
    <description>Sales - IM request to show approval which is needed from marketing</description>
    <label>Marketing Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>