force-app/main/default/objects/Opportunity/fields/NS_MPU_Contribution__c.field-meta.xml
<CustomField>
    <fullName>NS_MPU_Contribution__c</fullName>
    <description>Sales - IM request to capture the Margin Per Unit annually</description>
    <inlineHelpText>Margin Per Unit</inlineHelpText>
    <label>MPU Contribution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>