force-app/main/default/objects/Opportunity/fields/NS_Number_of_Days_in_Stage__c.field-meta.xml
<CustomField>
    <fullName>NS_Number_of_Days_in_Stage__c</fullName>
    <description>Calculate the number of days Opportunity has been in the current stage</description>
    <formula>ROUND (( TODAY() - NS_Stage_Change_Date__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days in Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>