force-app/main/default/objects/Opportunity/fields/NS_Opportunity_Description__c.field-meta.xml
<CustomField>
    <fullName>NS_Opportunity_Description__c</fullName>
    <description>area to detail the opportunity</description>
    <label>Opportunity Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>