force-app/main/default/objects/Opportunity/fields/NS_Orig_Department_for_Oppty_Name__c.field-meta.xml
<CustomField>
    <fullName>NS_Orig_Department_for_Oppty_Name__c</fullName>
    <formula>TEXT( NS_Originating_Department__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Orig Department for Oppty Name</label>
    <type>Text</type>
</CustomField>