force-app/main/default/objects/Opportunity/fields/NS_Origin_Carrier__c.field-meta.xml
<CustomField>
    <fullName>NS_Origin_Carrier__c</fullName>
    <label>Origin Carrier</label>
    <length>250</length>
    <type>Text</type>
</CustomField>