force-app/main/default/objects/Opportunity/fields/NS_Origin_City__c.field-meta.xml
<CustomField>
    <fullName>NS_Origin_City__c</fullName>
    <description>The origin city will come from Workbench when possible. This field is required to move the Opportunity to the Internal Review Stage</description>
    <inlineHelpText>This field is required to move the Opportunity to the Internal Review Stage</inlineHelpText>
    <label>Origin City</label>
    <length>250</length>
    <type>Text</type>
</CustomField>